--- a/config.css
+++ b/config.css
@@ -7,7 +7,7 @@
 
 .container {
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     padding: 20px;
     background: white;
     display: flex;
@@ -23,18 +23,17 @@
 }
 
 .donation-box {
-    width: 80%;
-    max-width: 1172px;
-    min-height: 30vh;
+    width: 50%;
+    max-width: 1000px;
     background: rgba(217, 217, 217, 0);
     border: 5px solid #FFA114;
     border-radius: 60px;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-around;
-    padding: 2vw;
-    margin: 2vw 0;
-    font-size: 2vw;
+    padding: 1.5vw;
+    margin: 1.5vw 0;
+    text-align: center;
 }
 
 .circle {
@@ -42,18 +41,28 @@
     max-width: 210px;
     height: 15vw;
     max-height: 210px;
-    background: white;
+    background: #FFA114;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #FFA114;
+    margin-bottom: 2vw;
 }
 
 .circle p {
     color: black;
     font-size: 2vw;
     text-align: center;
+}
+
+.donation-details {
+    font-size: 1.5vw;
+    line-height: 2vw;
+    color: #333;
+}
+
+.donation-details p {
+    margin: 2vw 0;
 }
 
 .action-buttons {
@@ -80,18 +89,27 @@
     border-color: #e59400;
 }
 
+/* Responsividade */
 @media (max-width: 768px) {
     .title {
         font-size: 6vw;
     }
 
-    .circle, .donation-details p, .action-button {
+    .circle {
+        width: 35vw;
+        height: 35vw;
+    }
+
+    .circle p,
+    .donation-details p,
+    .action-button {
         font-size: 4vw;
     }
 
     .donation-box {
-        flex-direction: column;
-        text-align: center;
+        width: 90%;
+        padding: 5vw;
+        font-size: 4vw;
     }
 
     .action-buttons {
