--- a/css/saibaMais.css
+++ b/css/saibaMais.css
@@ -5,14 +5,7 @@
     font-family: 'Lilita One', sans-serif;
 }
 
-body {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: #FDF3C0;
-}
+
 
 .main-container {
     width: 100%;
@@ -20,14 +13,13 @@ body {
     padding: 30px;
     background: #FDF3C0;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;
+
     gap: 20px;
 }
 
 .ong-info {
-    width: 100%;
-    max-width: 900px;
+    width: 80vw;
     padding: 40px;
     background: #F8E2A1;
     border: 6px solid #FFA114;
