--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 main{
     padding: 2rem 0;
+    justify-content: center;
 }
 
 .banner-intro{
@@ -28,7 +29,7 @@ main{
     margin-top: 3rem;
 }
 
-.btn-quero-doar{
+.btn-quero-doar-mobile{
     font-size: 6vw;
     background-color: #FFA114;
     padding: 1rem 2rem;
@@ -38,6 +39,9 @@ main{
     color: #FFD864;
 }
 
+.btn-quero-doar{
+    display: none;
+}
 
 .banner-cards-ongs{
     width: 100%;
@@ -45,53 +49,53 @@ main{
     grid-template-columns: 1fr;
     background-color:#FFD864;
     place-items: center;
-    gap: 1rem;
-
+    gap: 2rem;
+    padding: 2rem 0;
+    margin-top: 10rem;
 
 }
 
 .card-ong{
-    width: 50vw;
-    height: 40rem;
-    padding: 16px;
-    border-radius: 8px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
-}  
+    width: 70%;
+    height: 60vh;
+    background-color: #FFD864;
+    padding: 1.5rem 1rem;
+    border-radius: 18px;
+    border: 2px solid #FFA114;
+    max-width: 380px;
+    max-height: 340px;
+    
+}
 
     
-    
-
-
-
-.img-card{
-    width: 100%;
-    height: 10rem;
-    height: auto;
-    border-radius: 1rem;
-    grid-row: 1;
+.img-ong{
+    width: 90%;
+    height: 75%;
+    margin-bottom: 2.5rem;
+    border-radius: 18px;
 }
 
 
 
 .btn-conhecer{
-    font-size: 5vw;
+    font-size: 1.5rem;
     color: #F8E2A1;
     background-color: #FFA114;
-    padding: 2vw 4vw;
+    padding: 0.8rem 1.6rem;
     border-style: solid;
-    border-radius: 1rem;
+    border-radius: 18px;
     margin-top: 5rem;
-    height: 1rem;
-    width: 6rem;
-    margin-top: 10vw;
+    max-width: 185px;
+    max-height: 60px;
+
 }
 
 
 
 
 .banner-cards-clientes{
-    margin-top: 3rem;
+    margin-top: 6rem;
     display: grid;
     grid-template-columns: 1fr;
     place-items: center;
@@ -99,19 +103,88 @@ main{
 
 .card-doador{
     background-color: #FDF3C0;
-    width: 70%;
-    height: 40vw;
+    width: 80%;
+    height: 40vh;
     border : 2px solid #FFA114;
-    border-radius: 1rem;
+    border-radius: 18px;
     text-align: center;
     margin-top: 2rem;
+    max-width: 250px;
+    max-height: 150px;
 
 }
 
 .card-doador p{
-    padding: 6vw 3vw;
+    padding: 1.5rem 0.8rem;
 }
 
 
+@media(min-width:768px){
+    .banner-cards-ongs {
+            grid-template-columns: repeat(2, 1fr);
+            column-gap: 0;
+        }
+    .banner-cards-ongs > .card-ong:nth-child(3) {
+            grid-column: 1 / -1;
+            justify-self: center;
+        }
+    .card-doador{
+        max-width: 300px;
+        max-height: 160px;
+    }
+    .banner-cards-clientes{
+        grid-template-columns: repeat(3, 1fr);
+        
+    }
+}
 
 
+@media (min-width:1010px) {
+    .banner-intro{
+        padding: 0 4rem;
+    }
+    .btn-quero-doar-mobile{
+        display: none;
+    }
+    .btn-quero-doar{
+        display: inline;
+        font-size: 3.5vw;
+        background-color: #FFA114;
+        padding: 2rem 2rem;
+        border-style: solid;
+        border-radius: 1rem;
+        font-weight: 900;
+        color: #FFD864;
+        margin-left: 4rem;
+        text-align: center;
+    }
+
+    .a{
+        display: flex;
+        justify-content: end;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .first-line-banner{
+        display: flex;
+        align-items: center;
+    }
+}
+
+
+@media (min-width:1200px){
+    .banner-cards-ongs {
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 0;
+    }
+
+    .card-ong{
+        max-width: 500px;
+        max-height: 400px;
+    }
+    .banner-cards-ongs>.card-ong:nth-child(3) {
+        grid-column: auto;
+        justify-self: center;
+    }
+}
