--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,6 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cutive+Mono&family=Inconsolata:wght@200..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 /* Reset do css */
 
 html,
@@ -91,6 +93,7 @@ video {
     text-decoration: none;
 }
 
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -110,6 +113,8 @@ body {
     line-height: 1;
     overflow-x: hidden;
 }
+
+
 
 ol,
 ul {
@@ -139,7 +144,9 @@ table {
 body {
     background-color: #FDF3C0;
     margin: 0;
-    font-family: Lilita One;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 
 }
 
@@ -282,7 +289,11 @@ header {
     display: none;
 }
 
-
+*, header, footer, body, .container {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
 
 
 
