--- a/css/historicos.css
+++ b/css/historicos.css
@@ -9,7 +9,7 @@
     width: 100%;
     max-width: 1172px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     margin: 2vw 0;
 }
 
@@ -18,9 +18,9 @@
     font-size: 1.5vw;
     border: 4px solid #FFA114;
     border-radius: 10px;
-    background: white;
+    background: #F8E2A1;
     color: black;
-    margin-left: 7vw;
+    margin-right: 7vw;
 }
 
 .filter-options button {
@@ -29,7 +29,7 @@
     border: none;
     border-radius: 10px;
     background-color: #FFA114;
-    color: white;
+    color: #FDF3C0;
     cursor: pointer;
 }
 
@@ -41,7 +41,7 @@
     width: 100%;
     height: 100%;
     padding: 20px;
-    background: white;
+    background: #FDF3C0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -66,6 +66,7 @@
     justify-content: space-around;
     padding: 2vw;
     margin: 2vw 0;
+    background-color: #F8E2A1;
 }
 
 .circle {
