--- a/css/historicos.css
+++ b/css/historicos.css
@@ -18,7 +18,7 @@
     font-size: 1.5vw;
     border: 4px solid #FFA114;
     border-radius: 10px;
-    background: #F8E2A1;
+    background: #fff9e7;
     color: black;
     margin-right: 7vw;
 }
@@ -66,7 +66,7 @@
     justify-content: space-around;
     padding: 2vw;
     margin: 2vw 0;
-    background-color: #F8E2A1;
+    background-color: #fff9e7;
 }
 
 .circle {
