--- a/css/infidelizacao-ong.css
+++ b/css/infidelizacao-ong.css
@@ -10,7 +10,7 @@
     align-items: center;
     width: 100%;
     min-height: 100vh;
-    background-color: #FFF;
+    background-color: #FDF3C0;
 }
 
 .content-box {
@@ -20,6 +20,7 @@
     border-radius: 15px;
     border: 5px solid #FFA114;
     text-align: center;
+    background-color: #fff9e7;
 }
 
 .content-box h1 {
@@ -50,7 +51,8 @@ button {
 
 .confirm {
     color: #FF0004;
-    background-color: transparent;
+    background-color: #FFF;
+    border: 2px solid #FF0004;
 }
 
 .cancel {
