--- a/css/cadastrar.css
+++ b/css/cadastrar.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: white;
+    background: #FDF3C0;
     width: 100%;
     height: 100%;
     position: relative;
@@ -53,6 +53,7 @@
     border-radius: 50px;
     border: 2px solid black;
     color: #333;
+    background-color: #fff9e7;
 }
 
 .register-button {
