--- a/css/historicos.css
+++ b/css/historicos.css
@@ -1,110 +1,88 @@
-* {
+/* Estilos gerais */
+body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Lora', serif;
-}
-
-.filter-options {
-    width: 100%;
-    max-width: 1172px;
-    display: flex;
-    justify-content: flex-end;
-    margin: 2vw 0;
-}
-
-.filter-options select {
-    padding: 0.5vw;
-    font-size: 1.5vw;
-    border: 3px solid #FFA114;
-    border-radius: 10px;
-    background: #fff9e7;
-    color: black;
-    margin-right: 7vw;
-}
-
-.filter-options button {
-    padding: 0.5vw 1vw;
-    font-size: 1.5vw;
-    border: none;
-    border-radius: 10px;
-    background-color: #FFA114;
-    color: #FDF3C0;
-    cursor: pointer;
-}
-
-.filter-options button:hover {
-    background-color: #e59400;
+    font-family: Arial, sans-serif;
+    background-color: #FDF3C0;
 }
 
 .container {
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    background: #FDF3C0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    max-width: 1200px;
+    margin: 20px auto;
+    padding: 0 20px;
 }
 
 .title {
-    font-size: 4vw;
-    color: #FFA114;
-    margin: 2vw 0;
     text-align: center;
+    color: #FFA114;
+    margin: 30px 0;
+    font-size: 2em;
+}
+
+.filter-options {
+    margin: 20px 0;
+    text-align: right;
+}
+
+#filter-ong {
+    padding: 8px 15px;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: white;
 }
 
 .donation-box {
-    width: 80%;
-    max-width: 1172px;
-    min-height: 30vh;
-    background: rgba(217, 217, 217, 0);
-    border: 3px solid #FFA114;
-    border-radius: 60px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin: 20px 0;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    padding: 2vw;
-    margin: 2vw 0;
-    background-color: #fff9e7;
 }
 
 .circle {
-    width: 15vw;
-    max-width: 210px;
-    height: 15vw;
-    max-height: 210px;
-    background: white;
+    background: #4A90E2;
     border-radius: 50%;
+    width: 100px;
+    height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #FFA114;
+    margin-right: 20px;
 }
 
 .circle p {
-    color: black;
-    font-size: 2vw;
+    color: white;
+    font-weight: bold;
+    margin: 0;
     text-align: center;
 }
 
 .donation-details {
-    color: black;
-    font-size: 2vw;
-    text-align: left;
+    flex-grow: 1;
+}
+
+.donation-details p {
+    margin: 5px 0;
+    color: #666;
+}
+
+.donation-details p:first-child {
+    font-size: 1.2em;
+    color: #333;
+    font-weight: bold;
 }
 
 @media (max-width: 768px) {
-    .title {
-        font-size: 6vw;
-    }
-
-    .circle, .donation-details {
-        font-size: 3.5vw;
-    }
-
     .donation-box {
         flex-direction: column;
         text-align: center;
+    }
+
+    .circle {
+        margin: 0 0 20px 0;
     }
 }
