--- a/css/sobre.css
+++ b/css/sobre.css
@@ -9,7 +9,7 @@
 .box {
     width: 100%;
     max-width: 600px;
-    background-color: #F8E2A1;
+    background-color: white;
     padding: 2.5rem;
     border: 1px solid #FFA114;
     border-radius: 16px;
