--- a/css/home.css
+++ b/css/home.css
@@ -62,7 +62,7 @@ main {
     text-align: center;
     width: 70%;
     height: 60vh;
-    background-color: #FFD864;
+    background-color: #FDF3C0;
     padding: 1.5rem 1rem;
     border-radius: 18px;
     border: 2px solid #FFA114;
