--- a/css/login.css
+++ b/css/login.css
@@ -1,15 +1,11 @@
-html,
-body {
+html, body {
     height: 100%;
-    /* Garante que a altura do HTML e do body seja 100% */
     display: flex;
     flex-direction: column;
-    /* Organiza o conteúdo na direção vertical */
 }
 
 footer {
     margin-top: auto;
-    /* Isso faz com que o footer vá para a parte inferior */
 }
 
 .title {
@@ -17,29 +13,19 @@ footer {
     color: #FFA114;
     margin: 2vw 0;
     text-align: center;
-    
 }
 
-.login{
+.login {
     flex: 1;
-    /* Faz com que a seção de mudança de senha ocupe o espaço disponível, empurrando o footer para baixo */
     width: 100%;
-    /* A largura será 90% da tela, com um máximo definido */
     max-width: 500px;
-    /* Largura máxima para telas maiores */
     margin: 50px auto;
-    /* Centraliza a seção */
     background-color: white;
-    /* Fundo branco para destacar a seção */
     border-radius: 20px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    /* Sombra suave para dar destaque */
     padding: 20px;
-    /* Adiciona espaçamento interno para os elementos */
     box-sizing: border-box;
-    /* Garante que o padding não afete o tamanho total */
     border: 2px solid #FFA114;
-    /* Borda ao redor da box */
 }
 
 .title-container {
@@ -47,23 +33,11 @@ footer {
     margin-bottom: 30px;
 }
 
-
-
-.title-container h1 {
-    color: #e59400;
-    /* A cor desejada */
-    font-size: 3rem;
-    margin: 0;
-    /* Removendo margem adicional */
-}
-
 .login h1 {
     font-size: 36px;
     color: #2C3E50;
-    /* Cor do título (um tom mais escuro) */
     margin-bottom: 30px;
     text-align: center;
-    /* Centraliza o título */
 }
 
 .input-group {
@@ -79,7 +53,6 @@ footer {
 
 .input-group input {
     width: 100%;
-    /* Garante que o input ocupe toda a largura disponível */
     height: 50px;
     border-radius: 10px;
     border: 2px solid #ccc;
@@ -88,49 +61,67 @@ footer {
     color: #333;
     transition: border-color 0.3s ease-in-out;
     box-sizing: border-box;
-    /* Garante que o padding e a borda não afetem a largura do input */
 }
 
 .input-group input:focus {
     border-color: #FFA114;
-    /* Cor de borda ao focar */
     outline: none;
 }
 
-.secondary-action{
-    cursor:pointer;
+.secondary-action {
+    cursor: pointer;
     padding-right: 0.5rem;
     text-align: end;
 }
 
-.esqueci-senha{
-    color: #0066c0;
-}
-
-.cadastrar{
+.esqueci-senha, .cadastrar {
     color: #0066c0;
     text-decoration: underline;
 }
 
-.div-cadastrar{
-    margin-top: 2rem;
+/* Estilo para o texto de cadastro */
+.div-cadastrar {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 16px;
+    color: #333;
+    font-family: Arial, sans-serif;
 }
 
+.div-cadastrar p {
+    display: inline-block;
+    margin: 0;
+    color: #666;
+    font-size: 16px;
+}
 
+.div-cadastrar .cadastrar {
+    color: #3498db;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 5px 8px;
+    border-radius: 5px;
+    transition: color 0.3s, background-color 0.3s;
+}
+
+.div-cadastrar .cadastrar:not(:last-child)::after {
+    content: " / ";
+    color: #666;
+}
+
+.div-cadastrar .cadastrar:hover {
+    color: #fff;
+    background-color: #3498db;
+}
 
 
 .action-buttons {
     display: flex;
     justify-content: center;
-    /* Centraliza os botões horizontalmente */
     align-items: center;
-    /* Alinha verticalmente se necessário */
     gap: 10px;
-    /* Espaçamento entre os botões */
     margin-top: 20px;
-    /* Espaçamento acima dos botões */
 }
-
 
 .action-button {
     width: 45%;
@@ -141,11 +132,8 @@ footer {
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease, transform 0.2s ease;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
-    /* Sombra suave */
 }
 
-
-/* Estilo para o botão Cancelar */
 .action-button {
     background-color: #FFA114;
     border: 2px solid #e59400;
@@ -155,10 +143,6 @@ footer {
     background-color: #e59400;
     border-color: #FFA114;
 }
-
-
-
-
 
 /* Responsividade */
 @media (max-width: 480px) {
@@ -224,10 +208,8 @@ footer {
     }
 }
 
-
-@media(max-width:530px){
-    main{
+@media (max-width: 530px) {
+    main {
         margin: 0 1rem;
-        
     }
 }
